Fixed CRUD grid layout bug for user comments

--- a/src/scss/layouts/_grid.scss
+++ b/src/scss/layouts/_grid.scss
@@ -106,6 +106,12 @@
     
   }
 
+  &--you{
+    .CRUD-container{
+        grid-column: 7/8;
+    }
+  }
+
 }
 
 $ruler-column-size: clamp(rem(16px), vw(16px), rem(42px));
